; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-imx/extr_mach-pcm037.c_pcm970_sdhc1_exit.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-imx/extr_mach-pcm037.c_pcm970_sdhc1_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@MX31_PIN_SCK6 = common dso_local global i32 0, align 4
@SDHC1_GPIO_DET = common dso_local global i32 0, align 4
@SDHC1_GPIO_WP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i8*)* @pcm970_sdhc1_exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcm970_sdhc1_exit(%struct.device* %0, i8* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i8*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @MX31_PIN_SCK6, align 4
  %6 = call i32 @IOMUX_TO_GPIO(i32 %5)
  %7 = call i32 @gpio_to_irq(i32 %6)
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @free_irq(i32 %7, i8* %8)
  %10 = load i32, i32* @SDHC1_GPIO_DET, align 4
  %11 = call i32 @gpio_free(i32 %10)
  %12 = load i32, i32* @SDHC1_GPIO_WP, align 4
  %13 = call i32 @gpio_free(i32 %12)
  ret void
}

declare dso_local i32 @free_irq(i32, i8*) #1

declare dso_local i32 @gpio_to_irq(i32) #1

declare dso_local i32 @IOMUX_TO_GPIO(i32) #1

declare dso_local i32 @gpio_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
